// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecentLink.vue renders bubble when bubble is true 1`] = `
<div
  class="recent-link jello-horizontal"
>
  <div>
    <a
      class="short"
      href="YWZmOGFi"
    >
      pbid.io/YWZmOGFi
    </a>
     
    <p
      class="original"
      title="http://google.com"
    >
      
      http://google.com
    
    </p>
  </div>
   
  <i
    class="copy-icon"
    title="Copy"
  >
    <svg
      height="30px"
      viewBox="0 0 24 24"
      width="30px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
       
      <path
        d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
      />
    </svg>
  </i>
</div>
`;

exports[`RecentLink.vue renders props when passed 1`] = `
<div
  class="recent-link"
>
  <div>
    <a
      class="short"
      href="YWZmOGFi"
    >
      pbid.io/YWZmOGFi
    </a>
     
    <p
      class="original"
      title="http://google.com"
    >
      
      http://google.com
    
    </p>
  </div>
   
  <i
    class="copy-icon"
    title="Copy"
  >
    <svg
      height="30px"
      viewBox="0 0 24 24"
      width="30px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
       
      <path
        d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
      />
    </svg>
  </i>
</div>
`;
